# pyloggor

./: .gitignore  Changelog.md  README.md  pyproject.toml
pyloggor/: __init__.py  pyloggor.py
