[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloggor"
version = "2.0.0"
description = "An incredibly versatile yet simple logging system."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Parth Mittal", email = "parth@privatepanda.co" }]
keywords = ["logging", "logger", "log", "ansi", "console"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/PrivatePandaCO/pyloggor"
Documentation = "https://github.com/PrivatePandaCO/pyloggor/blob/master/README.md"
Repository = "https://github.com/PrivatePandaCO/pyloggor"
Changelog = "https://github.com/PrivatePandaCO/pyloggor/blob/master/Changelog.md"

[tool.setuptools]
packages = ["pyloggor"]

[tool.setuptools.package-data]
pyloggor = ["py.typed"]
